# insmaller

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  installer.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/insmaller-cli/: Cargo.toml  README.md  build.rs
crates/insmaller-cli/src/: interactive.rs  main.rs  theme.rs  tui.rs
crates/insmaller-cli/tests/: config_only_e2e.rs  exe_sibling_e2e.rs  form_widgets_e2e.rs  interactive_task_e2e.rs
crates/insmaller-core/: Cargo.toml  README.md
crates/insmaller-core/src/: about.rs  config.rs  ctx.rs  desugar.rs  error.rs  input.rs  json_catalog.rs  lib.rs  orchestrator.rs  pathenv.rs  plugin.rs  processor.rs  processors.rs  processors_io.rs  registry.rs  reporter.rs  scripts.rs  sentinel.rs  step.rs  tasks.rs  wizard.rs
crates/insmaller-core/tests/: codetainyrrr_e2e.rs  config_file.rs  e2e.rs  e2e_scenarios.rs  host_fixture_e2e.rs  leftover_e2e.rs  plugins.rs  wizard_e2e.rs
docs/: antivirus.md  fields.md
examples/: README.md  demo.catalog.json  demo.installer.toml  demo.wizard.toml  e2e-answers.toml  e2e-fixture.catalog.json  e2e-fixture.wizard.toml  e2e-installer.toml  e2e-merge.toml  e2e-tasks.toml  run-demo-ui.ps1  run-demo.ps1  sample.wizard.toml  serve-validate.py  siblings.catalog.json  wizard-widgets.toml
plans/: installer-engine-plan.md  iteration-2-plan.md  project-configs.md
plugins/lang-pkg/: installer.plugin.toml
plugins/sys-pkg/: installer.plugin.toml
scripts/: preflight.ps1  preflight.sh
