[workspace]
members = ["crates/insmaller-core", "crates/insmaller-cli"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
# placeholder — replace before any `cargo publish`; project is local-only today
repository = "https://example.invalid/insmaller"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
minijinja = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "process", "fs", "io-util", "macros", "time"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
glob = "0.3"
walkdir = "2"
ratatui = "0.29"
crossterm = "0.28"
indicatif = "0.17"
