[workspace]
members = ["crates/insmaller-core", "crates/insmaller-cli"]
resolver = "2"

# Release binaries: strip symbols and LTO. Smaller, single-unit output reads as
# a cleaner artifact to AV heuristics. Never add a packer (UPX) — packed
# binaries are the single biggest false-positive trigger.
[profile.release]
strip = true
lto = true
codegen-units = 1

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/walangstudio/insmaller"
homepage = "https://github.com/walangstudio/insmaller"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"
minijinja = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "process", "fs", "io-util", "macros", "time"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
glob = "0.3"
walkdir = "2"
ratatui = { version = "0.30", default-features = false, features = ["crossterm_0_29", "underline-color", "all-widgets", "macros", "layout-cache"] }
crossterm = "0.29"
indicatif = "0.17"
