[package]
name = "insmaller-cli"
version = "0.3.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Standalone harness to exercise the insmaller-core engine"

[[bin]]
name = "insmaller"
path = "src/main.rs"

[dependencies]
insmaller-core = { path = "../insmaller-core" }
anyhow.workspace = true
tokio.workspace = true
serde_json.workspace = true
toml.workspace = true
ratatui.workspace = true
crossterm.workspace = true
indicatif.workspace = true
dirs.workspace = true
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

[dev-dependencies]
tempfile = "3"

# Embeds version metadata + an asInvoker manifest on Windows (see build.rs).
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
