[package]
name = "insmaller"
version = "0.6.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Config-driven installer: describe install steps in TOML and run them from one binary"
keywords = ["installer", "setup", "cli", "tui", "toml"]
categories = ["command-line-utilities"]

[[bin]]
name = "insmaller"
path = "src/main.rs"

[dependencies]
insmaller-core = { path = "../insmaller-core", version = "0.6.2" }
anyhow.workspace = true
tokio.workspace = true
serde_json.workspace = true
toml.workspace = true
ratatui.workspace = true
crossterm.workspace = true
indicatif.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = "3"

# Embeds version metadata + an asInvoker manifest on Windows (see build.rs).
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
