[package]
name = "insmaller-core"
version = "0.3.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Config-driven installer engine: declarative step pipelines + pluggable processors"

[lib]
name = "insmaller_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
serde_yaml.workspace = true
minijinja.workspace = true
async-trait.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
dirs.workspace = true
glob.workspace = true
walkdir.workspace = true
regex = "1"
# Bounded-concurrency task scheduler (join_all over the needs DAG).
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

# P1 processors: download (http+hash) + extract (archive formats).
# ureq (sync, rustls, no wasm subtree) — avoids reqwest's js-sys/web-sys
# offline-resolution conflict on this network-restricted box.
ureq = "3"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
zip = "2"
bzip2 = "0.5"
xz2 = "0.1"

# P5 cdylib transport (optional; default build stays dep-light + offline).
# libloading is cached → `--features cdylib` builds offline.
# WASM (extism) is intentionally NOT declared: extism is absent from this
# box's offline cargo cache, and an optional dep cargo can't resolve offline
# breaks even the default build. WASM is delivered as documented-deferred —
# add `extism` + the WasmTransport (sketch in plans/iteration-2-plan.md) when
# building online. One JSON protocol → drop-in when enabled.
libloading = { version = "0.8", optional = true }

[features]
default = []
cdylib = ["dep:libloading"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "time"] }
tempfile = "3"
